--- a/AbilityIdLookupPlugin.csproj
+++ b/AbilityIdLookupPlugin.csproj
@@ -37,16 +37,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include=" E:\Frosty\FrostyToolsuite\FrostyControls\FrostyControls.csproj">
+    <ProjectReference Include=" D:\Frosty\FrostyToolsuite\FrostyControls\FrostyControls.csproj">
       <Private>false</Private>
     </ProjectReference>
-    <ProjectReference Include=" E:\Frosty\FrostyToolsuite\FrostyHash\FrostyHash.vcxproj">
+    <ProjectReference Include=" D:\Frosty\FrostyToolsuite\FrostyHash\FrostyHash.vcxproj">
       <Private>false</Private>
     </ProjectReference>
-    <ProjectReference Include=" E:\Frosty\FrostyToolsuite\FrostyPlugin\FrostyCore.csproj">
+    <ProjectReference Include=" D:\Frosty\FrostyToolsuite\FrostyPlugin\FrostyCore.csproj">
       <Private>false</Private>
     </ProjectReference>
-    <ProjectReference Include=" E:\Frosty\FrostyToolsuite\FrostySdk\FrostySdk.csproj">
+    <ProjectReference Include=" D:\Frosty\FrostyToolsuite\FrostySdk\FrostySdk.csproj">
       <Private>false</Private>
     </ProjectReference>
     <Reference Include="Microsoft.CSharp" />
